[package]
name = "rustmon"
version = "0.1.0"
authors = ["Harsh Pathak <nosyharsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.7", features = ["ntdef", "fileapi", "minwindef", "winnt", "handleapi", "synchapi", "winbase"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }